--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
+    "msw": "^1.2.2",
+    "msw-devtools": "^1.0.2",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
