--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.43.9",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@mswjs/data": "^0.13.0",
