--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -38,7 +40,12 @@
   },
   "devDependencies": {
     "@mswjs/data": "^0.13.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "husky": "^8.0.0",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.2"
   },
   "msw": {
