--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mswjs/data": "^0.13.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "husky": "^8.0.0",
     "jest": "^29.6.2",
