--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format:check": "npx prettier --check .",
+    "format:fix": "npx prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
@@ -44,10 +46,14 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "prettier": "3.0.2"
   },
   "msw": {
     "workerDirectory": "public"
